Git_WGBH_QC/src/objects/Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>Completed_By__c</fullName>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confidence__c</fullName>
        <inlineHelpText>E.G., +/- 10 hours</inlineHelpText>
        <label>Confidence</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decided_By__c</fullName>
        <label>Decided By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decided_On__c</fullName>
        <label>Decided On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Required_By__c</fullName>
        <label>Decision Required By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <label>Detailed Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimate_for_Analysis_Currency__c</fullName>
        <label>Estimate for Analysis (Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimate_for_Analysis__c</fullName>
        <label>Estimate for Analysis (Person Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_of_Postponing_or_Forgoing_Change__c</fullName>
        <label>Impact of Postponing or Forgoing Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <inlineHelpText>Tangible and intangible considerations, anticipated benefits</inlineHelpText>
        <label>Justification</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Decided_By__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Release_or_Phase_if_Postponed__c</fullName>
        <label>Planned Release (or Phase)(if Postponed)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor_Phone__c</fullName>
        <formula>Requested_By__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Role__c</fullName>
        <label>Requestor Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Title__c</columns>
        <columns>Detailed_Description__c</columns>
        <columns>Justification__c</columns>
        <columns>Requested_By__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Change Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>